# Email-Template-Spam-Checker

./: .sample.env  Dockerfile  README.md  check.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
app/: chains.py  llm_response_schemas.py  main.py  utils.py
app/prompts/: email_quality_check.txt  email_rewrite.txt  email_rewrite_html.txt
app/templates/: _base.html  homepage.html
app/templates/includes/: chatbot.html  navbar.html
prompts/: email_rewrite.txt  quality_check.txt
templates/: _base.html  homepage.html
